--- a/chat-backend/.gitignore
+++ b/chat-backend/.gitignore
@@ -1,6 +1,20 @@
-.DS_Store
+# Ignore environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+
+# Ignore dependencies
+/node_modules
+
+# Ignore logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignore build files
+/build
+
+# Ignore miscellaneous files
+.DS_Store
